probando subir tweets

--- a/Lab7.Rmd
+++ b/Lab7.Rmd
@@ -13,30 +13,34 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r cars}
 #Instalación de paquetes neuevos
-install.packages("twitteR")
-install.packages("ROAuth")
+#install.packages("twitteR")
+#install.packages("ROAuth")
 library("twitteR")
 library("ROAuth")
 library("readr") #Lee los archivos 
 library("tm")  #Contiene tranformaciones para el text mining
 library("wordcloud")
 library(ggplot2) #para gráficos
+library(base64enc)
+library(openssl)
+library(httpuv)
+library(httr)
 ```
 
 # Obteniendo el acceso a Twitter
 Para la realización de este laboratorio se decidió utilizar Twitter, para ello se creó una APP desde la página para developers de Twitter, donde se debía de obtener la autorización de Twitter para poder tener una APP de developer. Luego, con la autorización fue posible obtener el API y el token para poder obtener los tweets.
 
 ```{r pressure, echo=FALSE}
-my.consumer.key = ""
-my.consumer.secret = ""
-my.access.token = "99989439-"
-my.access.token.secret = ""
+my.consumer.key <- "MqlOqVvLnJb5o1xGs0o5Hu23Z "
+my.consumer.secret <- "eNM9IVRcuRNihtJK9glzMOoebFhxrm25z5IpUjGdffrWAz6nQi"
+my.access.token <- "225578097-aDwImEKkCOhVRF6aWwz4KDRsF7VuGi4qn5df7kdk"
+my.access.token.secret <- "5dv2mv7v059gIlMxbKfHpvXtqo5WpwrjfJI4lJXXmFi86"
 my_oauth <- setup_twitter_oauth(consumer_key = my.consumer.key, consumer_secret = my.consumer.secret, access_token = my.access.token, access_secret = my.access.token.secret)
 save(my_oauth, file = "my_oauth.Rdata")
 ```
 
 #Obtención de los datos para el Hashtag TráficoGT
-
+Se utilizaron las librerías *TwitterR* y *ROAuth* para la obtención de los datos y análisis. Se tomó la decisión de utilizar el $#TraficoGt$, con ayuda de las librerias importadas se buscaron los tweets y se creó un data frame a partir de los resultados obtenidos. 
 ```{r pressure, echo=FALSE}
 search.string <- "#TraficoGT"
 result.term <- searchTwitter(search.string, n = 100)
